Added comments to index file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Primary Printers is a leading supplier of printed disposable cups and glassware. We carry a full line of cup products and accessories, including compostable papers and plastics, glassware, gelato cups, coffee sleeves, lids, and more.">
-	<meta name="keywords" content="paper cups, plastic cups, glassware, coffee sleeves, gelato cups, ice cream cups, compostable cups, biodegradeable cups, eco cups, printed paper cups, printed plastic cups, custom printed cups, imprinted paper cups, imprinted plastic cups, promotional cups, logo on cups, custom cups, customized cups">
+	<meta name="keywords" content="paper cups, plastic cups, glassware, coffee sleeves, gelato cups, ice cream cups, compostable cups, biodegradeable cups, eco cups, printed paper cups, printed plastic cups, custom printed cups, imprinted paper cups, imprinted plastic cups, promotional cups, logo on cups, custom cups, customized cups"><!--same keywords as TCS -->
     
     <title>Primary Printers - Printed Cups and Glassware</title>
 
@@ -40,14 +40,14 @@
 
 <!--HEADER SECTION-->
 
- <header class="jumbotron pp-header">
+ <header class="jumbotron pp-header"><!--contains the montage of product menu items from TCS site -->
       <div class="container">
         <h1>Primary Printers</h1>
         <p>Custom printed disposable cups and glassware</p>
       </div>
  </header>
 
- <aside class="pp-codes">
+ <aside class="pp-codes"><!--these are Association codes for resellers-->
 	<p><i class="fa fa-check-square"></i> <strong>ASI</strong>/79522 <i class="fa fa-check-square"></i> <strong>SAGE</strong>/68087 <i class="fa fa-check-square"></i> <strong>PPPC</strong>/20081004</p>
 </aside>
 
